--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title> Scatter Plot </title>
     <link rel="stylesheet" href="styles.css">
-    <script src="https://unpkg.com/d3@5.6.0/dist/d3.min.js"></script>
+    <script src="https://github.com/drmurugesh/nicg-in/index.js"></script>
   </head>
   <body>
     <div id="menus">
